# MyODPlat

./: .gitignore  .odp-workspace  README.md  TEAM_HANDOFF.md  pyproject.toml  yolo26n.pt
apps/platform/: README.md  pyproject.toml
apps/platform/configs/: README.md
apps/platform/configs/datasets/: NWPU VHR-10 dataset.yaml  coco128-seg.yaml  d3_demo_nwpu.yaml  d3_demo_nwpu_txt.yaml  rsod.yaml
apps/platform/configs/runtime/: infer-seg.yaml  infer.yaml  infer_pipeline.yaml  train-seg.yaml  train.yaml  val-seg.yaml  val.yaml  val.yaml.bak.20260709_111618
apps/platform/logging/: README.md
apps/platform/src/od_platform/: __init__.py  _version.py  frame_source.py  visualization.py
apps/platform/src/od_platform/cli/: __init__.py  evaluate_model.py  evaluate_multi_model.py  infer.py  infer_model.py  init_project.py  reset_project.py  train_model.py  transform_data.py  validate_data.py
apps/platform/src/od_platform/common/: __init__.py  config_log.py  constants.py  dataset_path.py  log_rename.py  logging_utils.py  model_path.py  paths.py  performance_utils.py  plot_style.py  refs.py  result.py  string_utils.py  system_utils.py
apps/platform/src/od_platform/data_pipeline/: __init__.py  materialize.py  (+2 more)
apps/platform/tests/: README.md  __init__.py  test_data_pipeline.py  test_data_validation.py  test_evaluation.py  test_frame_source.py  test_inference.py  test_logging_utils.py  test_multi_evaluation.py  test_paths.py  test_reset_project.py  test_runtime_config.py  test_training.py  test_training_common.py  test_visualization.py  test_visualization_beautify.py
(+127 files in other folders)
